Set custom variables to overwrite bootstrap default variable values to fix theming. Fix form action alignment

--- a/ckanext/ckanext-sixodp_ui/ckanext/sixodp_ui/fanstatic/main.css
+++ b/ckanext/ckanext-sixodp_ui/ckanext/sixodp_ui/fanstatic/main.css
@@ -7653,11 +7653,6 @@ form .control-order-by {
 .form-actions .control-required-message:first-child {
   margin-left: 0;
 }
-@media (min-width: 768px) {
-  .form-actions {
-    text-align: right;
-  }
-}
 .form-actions .action-info {
   line-height: 2;
   text-align: left;
