--- a/ckanext/ckanext-sixodp_ui/src/scss/base/layout.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/base/layout.scss
@@ -81,7 +81,7 @@ body {
 }
 
 [role=main] {
-  background: $gray-lighter;
+  background: $brand-background;
 
   .primary {
     float: right;
