--- a/ckanext/ckanext-sixodp_ui/src/scss/base/variables.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/base/variables.scss
@@ -2,19 +2,25 @@
 $base: 10px;
 
 // Colors
+$lighten-intensity: 10%;
+$darken-intensity: 20%;
+
 $gray-base: #57575b;
+$gray-darker:            darken($gray-base, $darken-intensity*2);
+$gray-dark:              darken($gray-base, $darken-intensity);
+$gray:                   lighten($gray-base, $lighten-intensity*3);
+$gray-light:             lighten($gray-base, $lighten-intensity*4);
+$gray-lighter:           lighten($gray-base, $lighten-intensity*6);
+
 $black: $gray-base;
 $white: #ffffff;
 
-$brand-background: #f5f5f5;
+$brand-background: #eeeeee;
 $brand-primary: #534f97;
 $brand-success: #97ba54;
 $brand-info: #446eb5;
 $brand-warning: #f0ad4e; // Bootstrap default color
 $brand-danger: #d9534f; // Bootstrap default color
-
-$lighten-intensity: 10%;
-$darken-intensity: 10%;
 
 $brand-primary-light: lighten($brand-primary, $lighten-intensity);
 $brand-success-light: lighten($brand-success, $lighten-intensity);
@@ -27,6 +33,22 @@ $brand-success-dark: darken($brand-success, $darken-intensity);
 $brand-info-dark: darken($brand-info, $darken-intensity);
 $brand-warning-dark: darken($brand-warning, $darken-intensity);
 $brand-danger-dark: darken($brand-danger, $darken-intensity);
+
+$state-success-text: darken($brand-success, $darken-intensity);
+$state-success-bg: lighten($brand-success, $lighten-intensity);
+$state-success-border: darken(adjust-hue($state-success-bg, -10), 5%);
+
+$state-info-text: #31708f;
+$state-info-bg:  #d9edf7;
+$state-info-border: darken(adjust-hue($state-info-bg, -10), 7%);
+
+$state-warning-text: #8a6d3b;
+$state-warning-bg: #fcf8e3;
+$state-warning-border: darken(adjust-hue($state-warning-bg, -10), 5%);
+
+$state-danger-text: #a94442;
+$state-danger-bg: #f2dede;
+$state-danger-border: darken(adjust-hue($state-danger-bg, -10), 5%);
 
 // Typography
 $font-size: $base*1.6;
