--- a/ckanext/ckanext-sixodp_ui/src/scss/components/alert.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/components/alert.scss
@@ -1,4 +1,4 @@
 .alert {
-  border: $border-base solid $brand-danger;
+  border: $border-base solid transparent;
   border-radius: $border-radius-small;
 }
