--- a/ckanext/ckanext-sixodp_ui/src/scss/components/category-list.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/components/category-list.scss
@@ -18,7 +18,7 @@
 
     .item-description {
       font-size: 14px;
-      color: $gray-light;
+      color: $gray;
     }
   }
 }
