--- a/ckanext/ckanext-sixodp_ui/src/scss/components/topic-list.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/components/topic-list.scss
@@ -37,7 +37,7 @@
 
     .topic-timestamp {
       font-size: 14px;
-      color: $gray-light;
+      color: $gray;
     }
   }
 }
